--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Build Win & Mac
 
 on:
-  workflow_dispatch:        # ম্যানুয়ালি রান
+  workflow_dispatch:
   push:
-    branches: [ main ]      # main-এ push হলেই চলবে
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,24 +13,33 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Show files (debug)
+        run: |
+          pwd
+          ls -la
+          echo "----- recursive -----"
+          ls -R || true
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller PySide6 pandas openpyxl
 
-      - name: Build
+      - name: Build with PyInstaller
         run: |
           pyinstaller --noconfirm --onefile --windowed gr24_pricing_app.py
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-${{ matrix.os }}
           path: dist/*
+          if-no-files-found: error
